--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Prolisok Demo</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./index.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly"
-      async
-    ></script>
-  </body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly" async></script>
+</body>
+
 </html>
