--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly&libraries=geometry" async></script>
 </body>
 
 </html>
