--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <div id="floating-panel">
+        <input id="hide-markers" type="button" value="Hide Markers" />
+        <input id="show-markers" type="button" value="Show Markers" />
+        <input id="delete-markers" type="button" value="Delete Markers" />
+    </div>
+
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
