--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly&libraries=geometry" async></script>
+    <script src="./geometry.js"></script>
+    <script src="./draw.js"></script>
+    <script src="./prolisok.js"></script>
     <script src="./index.js"></script>
 </body>
 
