--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
 
+
 </head>
 
 <body>
@@ -23,6 +24,7 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2G3lOXgUXxCjNhGxIjOteFwHZQuAeFU&callback=initMap&v=weekly&libraries=geometry" async></script>
+    <script src="./markers.js"></script>
     <script src="./geometry.js"></script>
     <script src="./draw.js"></script>
     <script src="./prolisok.js"></script>
