--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             }
             scriptLoaded = true;
             var scriptTag = document.createElement('script');
-            scriptTag.src = 'main.dart.js';
+            scriptTag.src = './main.dart.js';
             scriptTag.type = 'application/javascript';
             document.body.append(scriptTag);
         }
